changed justify content of image container for recipe cards in order to correctly align ratings for different picture sizes

--- a/public/stylesheets/recipes.css
+++ b/public/stylesheets/recipes.css
@@ -23,7 +23,7 @@
 
 .recipe-card {
   display: grid;
-  height: 350px;
+  height: 18.5rem;
   width: 30%;
   grid-template-columns: 3fr 2fr;
   grid-template-rows: auto;
@@ -39,7 +39,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-around;
 }
 
 .image-container__recipe-save > .rating {
