--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -3,10 +3,6 @@ body {
   font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
 }
 
-input::placeholder, textarea::placeholder{
-  font-family: 'Lucida Grande', Helvetica, Arial, sans-serif;
-}
-
 * {
   font-family: 'Lucida Grande', Helvetica, Arial, sans-serif;
 }
